Fix card content centering/spacing

--- a/src/css/popup.scss
+++ b/src/css/popup.scss
@@ -431,7 +431,10 @@ html, body {
             font-weight: 400;
           }
           .card-content {
-
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
             list-style: none;
             margin: 0;
             padding: 5px 20px;
